# grimoire

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  ruff.toml  setup.py
grimoire/: __init__.py  extract.py  utils.py
grimoire/test/: test_extract.py
