[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gptcotts-grimoire"
version = "0.1.0"
authors = [
    { name="Thomas Cotter", email="thomascotter00@gmail.com" }
]
description = "A package for chunking and parsing markdown files"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tomcotter7/grimoire"
Issues = "https://github.com/tomcotter7/grimoire/issues"
